--- a/app.css
+++ b/app.css
@@ -12,7 +12,7 @@ body {
 }
 .container {
   width: 35rem;
-  height: 50rem;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
